--- a/SI-HexClan/projet/frontend/SignIn.html
+++ b/SI-HexClan/projet/frontend/SignIn.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <main id="main-holder">
+  <--!main id="main-holder"-->
     <h1 id="login-header">Login</h1>
     
     <div id="login-error-msg-holder">
@@ -23,7 +23,7 @@
       <input type="submit" value="Login" id="login-form-submit">
     </form>
   
-  </main>
+  </-main>
 </body>
 
 </html>
