--- a/SI2-3L2M1N/projet/Code/login/index.html
+++ b/SI2-3L2M1N/projet/Code/login/index.html
@@ -12,9 +12,9 @@
 <div class="form">
       
       <ul class="tab-group">
-        <li class="tab"><a href="#login">Connexion</a></li>
+        <li class="tab active"><a href="#login">Connexion</a></li>
 
-        <li class="tab active"><a href="#signup">Inscription</a></li>
+        <li class="tab "><a href="#signup">Inscription</a></li>
               </ul>
       
       <div class="tab-content">
