--- a/SI2-DREAM-TEAM/projet/src/main/resources/index.html
+++ b/SI2-DREAM-TEAM/projet/src/main/resources/index.html
@@ -10,7 +10,7 @@
 	
 <header>
 	<div id="banniere">
-		<strong>DREAM-TEAM Airlines</strong>
+		<strong>DREAM-TEAM Airlines </strong>
 	</div>
 	<nav>
 		<ul id="onglets">
@@ -23,45 +23,38 @@
 
 <body>
 	<div id="main1">
-	<br> </br>	
+	<br> </br>
 		<h2> DREAM-TEAM Airlines: ne rêvez plus de voyager </h2>
 		
 		<p> 
 		<img class ="img1" src="Images/photo8.jpg" alt="AvionAccueil" title="avion"/>
 		<div id="paragraphe1">
-			Post hanc adclinis <strong>Libano monti Phoenice,
-			regio plena gratiarum </strong>  et venustatis, urbibus decorata
-			magnis et pulchris; in quibus amoenitate celebritateque
-			nominum Tyros excellit, Sidon et Berytus isdemque pares
-			Emissa et Damascus saeculis condita priscis.Post hanc adclinis <strong>Libano monti Phoenice,
-			regio plena gratiarum </strong>  et venustatis, urbibus decorata
-			magnis et pulchris; in quibus amoenitate celebritateque
-			nominum Tyros excellit, Sidon et Berytus isdemque pares
-			Emissa et Damascus saeculis condita priscis.Post hanc adclinis <strong>Libano monti Phoenice,
-			regio plena gratiarum </strong>  et venustatis, urbibus decorata
-			magnis et pulchris; in quibus amoenitate celebritateque
-			nominum Tyros excellit, Sidon et Berytus isdemque pares
-			Emissa et Damascus saeculis condita priscis.
+			<strong>Paris, New-York, Detroit </strong> <br> 
+			N'avez vous jamais rêvé de les visiter ? <br> <br>Grâce à DREAM-TEAM Airlines, c'est possible !
+			Découvrez la Tour Eiffel, le Sacré-Coeur, mais aussi la Statue de la Liberté, l'Empire State Building, ou encore le Musée Henry Ford et l'Institut des Arts de Detroit, 
+			tout cela <strong>à moindre prix</strong> ! <br>
+			Partez depuis Paris CDG, New-York JFK, ou encore Détroit DTW pour enfin vivre vos rêves d'évasions ! <strong> OSEZ décoller ! </strong>	
+			
 		</div>
 		</p>
+		<br> </br>
 		<p>
 			
 			<a href="./reservation.html">
 			<button class="favorite styled"	type="button" >
-			N'hésitez plus, envolez-vous dès maintenant
+			S'envoler dès maintenant
 			</button>
 			</a>	
+			<br> </br>	
 		</p>
-		<br> </br>	
 	</div>
 	</body>
 
 <footer>
 	<ul id="contacts">
 	<li><a class="contact" href="https://github.com/T2Clubber/tp-architecture/tree/SI2-DREAM-TEAM">Notre repository Git</a></li>
-	<br> </br>
-	<p class = "contact2">DREAM-TEAM Corporation</p>
+	<p class = "contact2">DREAM-TEAM Team</p>
 	</ul>
 </footer>
-
+</html>
 
