--- a/SI2-DREAM-TEAM/projet/src/main/resources/mesvols.html
+++ b/SI2-DREAM-TEAM/projet/src/main/resources/mesvols.html
@@ -32,11 +32,10 @@
 
 </body>
 
-
 <footer>
 	<ul id="contacts">
 	<li><a class="contact" href="https://github.com/T2Clubber/tp-architecture/tree/SI2-DREAM-TEAM">Notre repository Git</a></li>
-	<br> </br>
-	<p class = "contact2">DREAM-TEAM Corporation</p>
+	<p class = "contact2">DREAM-TEAM Team</p>
 	</ul>
 </footer>
+</html>
