--- a/SI2-DREAM-TEAM/projet/src/main/resources/reservation.html
+++ b/SI2-DREAM-TEAM/projet/src/main/resources/reservation.html
@@ -20,11 +20,10 @@
 		</ul>
 	</nav>
 </header>
-
 <body>
 	<div id="main1">
 			<!-- <h2> Vols disponibles </h2> -->
-			<br> </br>
+			<br> </br>	
 			<center>
 			<table border="1" width="80%" cellspacing="0" cellpadding="6">
 			   <thead>
@@ -68,12 +67,9 @@
 			   </tbody>
 			</table>
 			</center>
-			<br> </br>
-
 	</div>
 	<div id="main1">
 		<!--<h2> Réserver un vol </h2>*/ -->
-		<br> </br>
 		<p>
 			<label for="flight-select">Aéroport de départ:</label>
 			<select name="flights" id="flight-select">
@@ -83,6 +79,7 @@
 				<option value="DTW">Detroit DTW</option>
 			</select>
 		</p>
+		<br> </br>
 		<p>
 			<label for="flight-select">Aéroport d'arrivée:</label>
 			<select name="flights" id="flight-select">
@@ -92,12 +89,14 @@
 				<option value="DTW">Detroit DTW</option>
 			</select>
 		</p>
+		<br> </br>
 		<p>
 		<label for="name">Nom:</label>
 
 		<input type="text" id="name" name="name" required
 		minlength="3" maxlength="60" size="60">
 		</p>
+		<br> </br>
 		<p>
 			<button class="favorite styled"
 			type="button">
@@ -105,18 +104,16 @@
 			</button>
 		</p>
 	</div>	
-	
-	
 
+	
 </body>
 
 <footer>
 	<ul id="contacts">
 	<li><a class="contact" href="https://github.com/T2Clubber/tp-architecture/tree/SI2-DREAM-TEAM">Notre repository Git</a></li>
-	<br> </br>
-	<p class = "contact2">DREAM-TEAM Corporation</p>
+	<p class = "contact2">DREAM-TEAM Team</p>
 	</ul>
 </footer>
-
+</html>
 
 
