modification front-end

--- a/iad-teams-2/project/code/reservation.html
+++ b/iad-teams-2/project/code/reservation.html
@@ -10,12 +10,18 @@
         <h1 class="title">Réservation</h1>
 
         <form action="">
-            <label for="departureLocation">Départ de:</label>
-            <input type="text" name="departureLocation" id="departureLocation"><br>
-            <label for="arrivalLocation">Arrivée à:</label>
-            <input type="text" name="arrivalLocation" id="arrivalLocation" value="">
-            <label for="arrivalLocation">Arrivée à:  </label>
-            <input type="text" name="arrivalLocation" id="arrivalLocation" value="">
+            <label for="departureLocation">Départ de:</label><br>
+            <input type="text" name="departureLocation" id="departureLocation" value=""><br>
+            <label for="arrivalLocation">Arrivée à:</label><br>
+            <input type="text" name="arrivalLocation" id="arrivalLocation" value=""><br>
+            <label for="arrivalLocation">Prix:</label><br>
+            <input type="text" name="arrivalLocation" id="arrivalLocation" value=""><br>
+            <label for="clientNom">Nom</label><br>
+            <input type="text" name="clientName" id="clientName"><br>
+            <label for="clientPrénom">Prénom</label><br>
+            <input type="text" name="clientName" id="clientName"><br><br>
+
+            <input type="submit" value="Réserver">
         </form>
     </div>
 </body>
