--- a/ia1-WestCoast/projet/code/index.html
+++ b/ia1-WestCoast/projet/code/index.html
@@ -20,12 +20,14 @@
 
         <!-- Affichage des billets -->
         <section id="section_billets">
+        	<div id="title">Vols disponibles :</div>
             <span id="billets">
             </span>
         </section>
 
         <!-- Affichage du panier -->
         <section id="section_achats">
+        	<div id="title">Vos billets :</div>
             <span id="achats">
             </span>
         </section>
