--- a/SI3-6Thé/projet/site/home.html
+++ b/SI3-6Thé/projet/site/home.html
@@ -58,32 +58,12 @@
                 <th scope="col">#</th>
                 <th scope="col">Code départ</th>
                 <th scope="col">Code destination</th>
+                <th scope="col">Date</th>
                 <th scope="col">Prix</th>
                 <th scope="col"></th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                <td><button id="btnBook" class="btn btn-success">Réserver</button></td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-                <td><button id="btnBook" class="btn btn-success">Réserver</button></td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
-                <td><button id="btnBook" class="btn btn-success">Réserver</button></td>
-              </tr>
+            <tbody id="tbody">
             </tbody>
           </table>
         </div>
