--- a/iad1-FEAT_PARIS_LAVAL/projet/front/booking.html
+++ b/iad1-FEAT_PARIS_LAVAL/projet/front/booking.html
@@ -17,15 +17,61 @@
 <div class="text-center" style="margin-top: 20px">
    <button class="btn btn-outline-dark" onclick="openFlights()">Aller aux vols</button>
 </div>
-
 <div class="row">
-   <div id="booking" class="card-deck" style="margin-top: 40px; margin-left: 30px; margin-right: 30px">
+   <div id="booking" class="card-deck" style="margin-top: 40px; margin-left: 30px; margin-right: 30px;">
 
    </div>
 </div>
 
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
    const email = localStorage.getItem('email');
+
+       fetch('http://localhost:8080/bookings?mail='+email)
+            .then(res => res.json())
+            .then(function (json) {
+
+               for (let i = 0; i < json.length; i++) {
+                  book_src = json[i]['airport_source']['name']
+                  book_dst = json[i]['airport_destination']['name']
+                  book_date = json[i]['flight_date'].slice(0, 10).split("-").reverse().join("/")
+                  book_price = json[i]['price']
+                  book_code = json[i]['airport_source']['code'] + "-" + json[i]['airport_destination']['code'] + " " + book_price
+                  book_seat = Math.floor(Math.random() * 200) + 1
+
+                  var book_card = '\
+                     <div class="col-sm-6" style="margin-bottom: 40px; width: 100%">\
+                        <div class="card border-primary">\
+                           <div class="card-header border-dark" style="text-align: center; background: #3a425d">\
+                           <p id=identifiantBillet class="card-link" style="color:white; font-size:150%">' + book_code + '</p>\
+                           </div>\
+                           <div class="card-body">\
+                              <h5 class="card-title" id="book_' + i + '">Bon voyage vers ' + book_dst + ' !</h5>\
+                              <p class="card-text">\
+                                 <div class="container">\
+                                    <div class="row" style="margin-top:10%">\
+                                       <div class="col">\
+                                          <p>Aéroport de départ :<a style="font-size:200%" id="departureAirport"> ' + book_src + ' </a></p>\
+                                          <p>Aéroport d\'arrivée :<a style="font-size:200%" id="landingAirport"> ' + book_dst + ' </a></p>\
+                                          <p>Date :<a style="font-size:200%" id="dateVol"> ' + book_date + ' </a></p>\
+                                          <p>Prix :<a style="font-size:200%" id="prixVol"> ' + book_price + ' </a> €</p>\
+                                       </div>\
+                                       <div class="col" style="border-style: dashed; border-width:1px">\
+                                          <p style="text-align: center;">Place n°<a style="font-size:800%" id="seatNumber"> ' + book_seat + ' </a></p>\
+                                       </div>\
+                                    </div>\
+                                 </div>\
+                              </p>\
+                           </div>\
+                           <div class="card-footer border-dark" style="background: #3a425d">\
+                           </div>\
+                        </div>\
+                     </div >\
+                  ';
+
+                  document.getElementById("booking").innerHTML += book_card;
+               }
+            }).catch(err => console.log(err));
 
    function openMenu() {
       window.location.href = 'menu.html';
