--- a/iad1-FEAT_PARIS_LAVAL/projet/front/flights.html
+++ b/iad1-FEAT_PARIS_LAVAL/projet/front/flights.html
@@ -1,87 +1,82 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Liste des vols</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+  </head>
+  <body class="bg">
+    <h1 class="text-center" style="margin-top: 40px">Liste des vols disponibles</h1>
 
-<head>
-  <title>Liste des vols</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="main.css">
-  <meta charset="UTF-8">
-</head>
+    <div class="text-center" style="margin-top: 30px">
+      <button class="btn btn-outline-dark" onclick="openMenu()">Revenir au menu</button>
+    </div>
+    
+    <div class="text-center" style="margin-top: 20px">
+      <button class="btn btn-outline-dark" onclick="openBooking()">Aller aux réservations</button>
+    </div>
+    <div id="flights" class="row card-deck" style="margin-top: 40px; margin-left: 30px; margin-right: 30px;">
+    </div>
+    
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script>
+      const email = localStorage.getItem('email');
+      document.getElementById("flights").innerHTML = "Aucun vol n'est disponible";
+      fetch('http://localhost:8080/flights')
+        .then(res => res.json())
+        .then(function (json) {
+          document.getElementById("flights").innerHTML = "";
+          json.forEach((e, i) => {
+            flight_id = e.id;
+            flight_src = e.source_airport.name;
+            flight_dst = e.destination_airport.name;
+            flight_date = e.flight_date.slice(0, 10).split("-").reverse().join("/");
+            flight_price = e.price;
+            flight_seat_nb = e.tickets;
+            flight_code = `${e.source_airport.code} - ${e.destination_airport.code} ${flight_price}`;
 
-<body class="bg">
-  <h1 class="text-center" style="margin-top: 40px">Liste des vols disponibles</h1>
+            if(flight_seat_nb > 0) {
+              let flight_card = `<div class="col-sm-6" style="margin-bottom: 40px">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title" id="flight_${flight_id}">${flight_code}</h5>
+                    <p class="card-text">
+                    <p>Aéroport de départ : <a id="departureAirport">${flight_src}</a></p>
+                    <p>Aéroport d'arrivée : <a id="landingAirport">${flight_dst}</a></p>
+                    <p>Date :<a id="dateVol">${flight_date}</a></p>
+                    <p>Prix :<a id="prixBillet">${flight_price}</a> €</p>
+                    <p>Places Disponibles : <a id="placeDispo_${flight_id}">${flight_seat_nb}</a></p>
+                    </p>
+                  </div>
+                  <div class="card-footer" style="text-align: center">
+                    <a href="#" id="reserve" class="card-link" onclick="book(${flight_id})">Réserver</a>
+                  </div>
+                </div>
+              </div>`;
 
-  <div class="text-center" style="margin-top: 30px">
-    <button class="btn btn-outline-dark" onclick="openMenu()">Revenir au menu</button>
-  </div>
-  
-  <div class="text-center" style="margin-top: 20px">
-    <button class="btn btn-outline-dark" onclick="openBooking()">Aller aux réservations</button>
-  </div>
-  <div id="flights" class="row card-deck" style="margin-top: 40px; margin-left: 30px; margin-right: 30px;">
-  </div>
-  
-  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script>
-    const email = localStorage.getItem('email');
+              document.getElementById("flights").innerHTML += flight_card;
+            }
+          });
+        }).catch(err => console.error(err));
 
-    fetch('http://localhost:8080/flights')
-      .then(res => res.json())
-      .then(function (json) {
-        for (let i = 0; i < json.length; i++) {
-          flight_id = json[i]['id']
-          flight_src = json[i]['source_airport']['name']
-          flight_dst = json[i]['destination_airport']['name']
-          flight_date = json[i]['flight_date'].slice(0, 10).split("-").reverse().join("/")
-          flight_price = json[i]['price']
-          flight_seat_nb = json[i]['tickets']
-          flight_code = json[i]['source_airport']['code'] + "-" + json[i]['destination_airport']['code'] + " " + flight_price
-
-          if(flight_seat_nb <= 0) continue;
-
-          var flight_card = '\
-            <div class="col-sm-6" style="margin-bottom: 40px">\
-              <div class="card">\
-                <div class="card-body">\
-                  <h5 class="card-title" id="flight_' + flight_id + '">' + flight_code + '</h5>\
-                  <p class="card-text">\
-                  <p>Aéroport de départ :<a id="departureAirport"> ' + flight_src + ' </a></p>\
-                  <p>Aéroport d\'arrivée :<a id="landingAirport"> ' + flight_dst + ' </a></p>\
-                  <p>Date :<a id="dateVol"> ' + flight_date + ' </a></p>\
-                  <p>Prix :<a id="prixBillet"> ' + flight_price + ' </a> €</p>\
-                  <p>Places Disponibles :<a id="placeDispo_' + flight_id + '"> ' + flight_seat_nb + ' </a></p>\
-                  </p>\
-                </div>\
-                <div class="card-footer" style="text-align: center">\
-                  <a href="#" id=reserve class="card-link" onclick="book(\'' + flight_id + '\')">Réserver</a>\
-                </div>\
-              </div>\
-            </div>\
-          ';
-
-          document.getElementById("flights").innerHTML += flight_card;
+        function book(flight_id) {
+          let url = "http://localhost:8080/bookings";
+          var data = { mail: email, id_flight: flight_id }
+          axios.post(url, data)
+            .then(function(res){
+              window.location.href = 'flights.html'
+            })
+            .catch(err => alert(err));
         }
-      }).catch(err => console.log(err.response.data));
 
-      function book(flight_id) {
-        let url = "http://localhost:8080/bookings";
-        var data = { mail: email, id_flight: flight_id }
-        axios.post(url, data)
-          .then(function(res){
-            document.getElementById("placeDispo_" + flight_id).innerHTML = " " + (parseInt(document.getElementById("placeDispo_" + flight_id).innerHTML) - 1).toString();
-            alert("Vol reservé, voir réservations.");
-          })
-          .catch(err => alert(err));
-      }
+        function openMenu() {
+          window.location.href = 'menu.html';
+        }
 
-      function openMenu() {
-        window.location.href = 'menu.html';
-      }
-
-      function openBooking() {
-        window.location.href = 'booking.html';
-      }
-  </script>
-</body>
-
+        function openBooking() {
+          window.location.href = 'booking.html';
+        }
+    </script>
+  </body>
 </html>
