--- a/SI2-LesPatatesDouces/projet/code/index.html
+++ b/SI2-LesPatatesDouces/projet/code/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styles/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet" />
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet" />
@@ -10,35 +12,121 @@
 </head>
 
 <body>
+    <div id="titre">Bienvenue sur votre site de réservation de vols !</div>
     <div id="app">
         <v-app>
-            <v-data-table :headers="headersAeroports" :items="aeroports"></v-data-table>
-            <v-data-table :headers="headersVols" :items="vols"></v-data-table>
+            <div v-if="logged == false && showSignInForm != true && showSignUpForm != true">
+                <!--<v-data-table :headers="headersAeroports" :items="aeroports"></v-data-table>
+                
+                -->
+                <v-btn block @click="seConnecter">
+                    Se Connecter
+                </v-btn>
+                <v-btn block @click="sInscrire">
+                    S'Inscrire
+                </v-btn>
+            </div>
+            <div v-if="showSignInForm == true">
+                <signing-in v-on:logged="loggedF"></signing-in>
+                <v-row align="center" justify="space-around">    
+                    <btn-return v-on:retour="retour"></btn-return>
+                </v-row>
+            </div>
+            <div v-if="showSignUpForm == true">
+                <signing-up v-on:signedup="signedUp"></signing-up>
+                <v-row align="center" justify="space-around">
+                    <btn-return v-on:retour="retour"></btn-return>
+                </v-row>
+            </div>
+            <div v-if="logged == true">
+                <flight-table></flight-table>
+                <v-row align="center" justify="space-around">
+                    <v-btn @click="seeReservation">Voir mes billets réservés</v-btn>
+                    <v-btn color="error" class="mr-4" @click="signOut">Se déconnecter</v-btn>
+                </v-row>
+
+            </div>
+
         </v-app>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script src="./composants.js"></script>
     <script>
         new Vue({
             el: '#app',
             vuetify: new Vuetify(),
             data: {
                 aeroports: [],
-                vols: [],
                 headersAeroports: [
-                    {text: 'Ville', value: 'ville'},
-                    {text: 'Code', value: 'code'}
+                    { text: 'Ville', value: 'ville' },
+                    { text: 'Code', value: 'code' }
                 ],
-                headersVols: [
-                    {text: 'Ville de Départ', value: 'depart.ville'},
-                    {text: 'Ville d\'Arrivée', value: 'arrivee.ville'},
-                    {text: 'Date de Départ', value: 'date_depart'},
-                    {text: 'Date d\'Arrivée', value: 'date_arrivee'},
-                    {text: 'Nombre de places disponibles', value: 'nombre_billets'}
-                ]
+                user: {},
+                email: "",
+                password: "",
+                logged: false,
+                isSignedUp: null,
+                showSignUpForm: false,
+                showSignInForm: false
             },
-            mounted: function(){
+            components: {
+                'signing-in': signingIn,
+                'signing-up': signingUp,
+                'btn-return': btnReturn,
+                'flight-table': flightTable
+            },
+            methods: {
+                seeReservation() {
+
+                },
+                retour() {
+                    this.logged = false
+                    this.showSignInForm = false
+                    this.showSignUpForm = false
+                },
+                loggedF(email, status) {
+                    if (status) {
+                        this.email = email
+                        this.logged = true
+                        this.showSignInForm = false
+
+                    } else {
+                        alert("Identifiants de connexion incorrects.")
+                    }
+                },
+                signedUp(email, password, status) {
+                    if (status) {
+                        this.email = email
+                        this.logged = true
+                        this.showSignUpForm = false
+                    } else {
+                        alert("Cette adresse mail est déjà utilisée.")
+                    }
+                },
+                seConnecter() {
+                    this.showSignInForm = true
+                },
+                sInscrire() {
+                    this.showSignUpForm = true
+                },
+
+                signOut() {
+                    this.logged = false
+                    this.signedUp = null
+                    fetch("http://localhost:5000/sign-out", {
+                        method: 'POST',
+                        headers: {
+                            'Content-Type': 'application/json'
+                        },
+                        body: JSON.stringify(email)
+                    })
+                    this.email = ""
+                    this.password = ""
+                }
+            },
+            /*mounted: function(){
                 fetch("http://localhost:5000/aeroport/all")
                 .then(function(response){
                     return response.json()
@@ -51,7 +139,7 @@
                 }).then((json) =>
                     this.vols = json //Pourquoi ça marche, on ne sait pas. function ne fonctionne pas
                 )
-            }
+            }*/
         })
 
 
