--- a/si1-chepa/projet/code/lumen-project/public/InterfaceClient/acceuil.html
+++ b/si1-chepa/projet/code/lumen-project/public/InterfaceClient/acceuil.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Reservations</title>
-    
-    <link rel="stylesheet" href="style.css">    
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
     <div class="gen">
-    
+
 <ul class="list-arrea">
 <li><a href="login.html">Se connecter</a></li>
-<li><a href="#">liste des vols</a></li>
+<li><a href="reservation.html">liste des vols</a></li>
 <li><a href="#">Reservation de billet</a></li>
 <li><a href="#">Contact</a></li>
 </ul>
@@ -27,4 +27,3 @@
 
 </body>
 </html>
-
