--- a/si1-chepa/projet/code/lumen-project/public/InterfaceClient/reservation.html
+++ b/si1-chepa/projet/code/lumen-project/public/InterfaceClient/reservation.html
@@ -6,12 +6,18 @@
 	</head>
 	<body>
 		<div>
-			<p><u>
+			<h1> <p class="center" color="white"><u>
 				<b><center>Choisissez un Vol</center></b></p>
 				</u>
+			</h1>
 			</div>
 		<table class="center">
+<div class="gen">
 
+<ul class="list-arrea">
+<li><a href="acceuil.html">Retour Accueil</a></li>
+</ul>
+</div>
     <thead>
         <tr>
             <th colspan="3">Vols disponibles</th>
