--- a/SI3-6Thé/projet/site/home.html
+++ b/SI3-6Thé/projet/site/home.html
@@ -56,8 +56,8 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Code départ</th>
-                <th scope="col">Code destination</th>
+                <th scope="col">Départ</th>
+                <th scope="col">Destination</th>
                 <th scope="col">Date</th>
                 <th scope="col">Prix</th>
                 <th scope="col"></th>
