--- a/si2-NoName/projet/code/client/client.html
+++ b/si2-NoName/projet/code/client/client.html
@@ -3,56 +3,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reservation de vols</title>
+
+    <div> 
+        <strong>
+            <h1 class="p-3 text-center bg-success text-white display-1">Réservation des vols</h1>
+        </strong>
+    </div>
 </head>
 <body>
 
 <div id="error" style="color: red;"></div>
 <div id="success" style="color: green;"></div>
 
-<div>
-    <h1>Information de réservation et de consultation : </h1>
+<div class="m-4">
+    <h1>Utilisateur :</h1>
     <input type="text" id="nom" placeholder="Nom">
     <input type="text" id="prenom" placeholder="Prénom">
-    <button onclick="getReservation()">Voir les réservations</button>
+    <button class="bg-success" onclick="getReservation()">Vos réservations</button>
 </div>
-<h1>Liste des reservations</h1>
-<div>
+<div class="m-4">
+    <h1>Liste des reservations :</h1>
     <table>
         <thead>
             <tr>
-                <th>depart</th>
-                <th>arrivé</th>
-                <th>prix</th>
-                <th>code</th>
+                <th>Départ</th>
+                <th>Arrivé</th>
+                <th>Prix</th>
+                <th>Code</th>
             </tr>
         </thead>
         <tbody id="listeReserv" >
         </tbody>
     </table>
+    <button class="bg-success" onclick="listeVol();">Liste des vols</button>
 </div>
-<h1>Liste des vols</h1>
-<button onclick="listeVol();">Voir la liste des vols</button>
-<div >
+<div class="m-4">
+    <h1>Liste des vols :</h1>
     <table>
         <thead>
             <tr>
-                <th>depart</th>
-                <th>arrivé</th>
-                <th>prix</th>
-                <th>code</th>
-                <th></th>
+                <th>Départ</th>
+                <th>Arrivé</th>
+                <th>Prix</th>
+                <th>Code</th>
             </tr>
         </thead>
         <tbody id="listeVol" >
         </tbody>
     </table>
 </div>
-    
 </body>
 </html>
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/js/bootstrap.min.js" integrity="sha512-8qmis31OQi6hIRgvkht0s6mCOittjMa9GMqtK9hes5iEQBQE/Ca6yGE5FsW36vyipGoWQswBj/QBm2JR086Rkw==" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" integrity="sha512-oc9+XSs1H243/FRN9Rw62Fn8EtxjEYWHXRvjS43YtueEewbS6ObfXcJNyohjHqVKFPoXXUxwc+q1K7Dee6vv9g==" crossorigin="anonymous" />
 <script>
 
 function listeVol(){
@@ -76,7 +81,6 @@ function listeVol(){
             }
             document.getElementById('listeVol').innerHTML = html;
         },
-    
     });
 }
 
