--- a/si3-DDistrib/projet/client/public/home.html
+++ b/si3-DDistrib/projet/client/public/home.html
@@ -8,25 +8,29 @@
 	    <script src="./js/manageHomeView.js"></script>
         <div>
             <div class="gauche">
-                <h1>Chercher un billet :</h1>
+                <h1>Chercher un billet</h1>
                 <!-- *********************************************************** -->
                 <div class="recherche">
                     <form action="" method="GET">
-                        <label for="depuis">Depuis :</label>
-                        <select id="rechercheFrom">
-						<option id="from_Tous" value="Tous">Tous</option>
-						<option id="from_Charles_de_Gaulle_(Paris)" value="Charles_de_Gaulle_(Paris)">Charles de Gaulle</option>
-						<option id="from_New_York" value="New_York">New York</option>
-						<option id="from_Detroit" value="Detroit">Detroit</option>
-                        </select>
-                        <label for="vers">vers :</label>
-                       <select id="rechercheTo">
-						<option id="to_Tous" value="Tous">Tous</option>
-						<option id="to_Charles_de_Gaulle_(Paris)" value="Charles_de_Gaulle_(Paris)">Charles de Gaulle</option>
-						<option id="to_New_York" value="New_York">New York</option>
-						<option id="to_Detroit" value="Detroit">Detroit</option>
-                       </select>
-                       <input type="button" value="Rechercher" onclick="rechercheButtonAction()"></input>
+                        <div class="from">
+                            <label for="depuis">Depuis :</label>
+                            <select id="rechercheFrom">
+                                <option id="from_Tous" value="Tous">Tous</option>
+                                <option id="from_Charles_de_Gaulle_(Paris)" value="Charles_de_Gaulle_(Paris)">Charles de Gaulle</option>
+                                <option id="from_New_York" value="New_York">New York</option>
+                                <option id="from_Detroit" value="Detroit">Detroit</option>
+                            </select>
+                        </div>
+                        <div class="to">
+                            <label for="vers">vers :</label>
+                           <select id="rechercheTo">
+                                <option id="to_Tous" value="Tous">Tous</option>
+                                <option id="to_Charles_de_Gaulle_(Paris)" value="Charles_de_Gaulle_(Paris)">Charles de Gaulle</option>
+                                <option id="to_New_York" value="New_York">New York</option>
+                                <option id="to_Detroit" value="Detroit">Detroit</option>
+                           </select>
+                        </div>
+                       <input class="button" type="button" value="Rechercher" onclick="rechercheButtonAction()"></input>
                     </form>
                 </div>
                 <!-- *********************************************************** -->
@@ -39,7 +43,7 @@
             </div>
             
             <div class="droite">
-                <h1>Mes billets :</h1>
+                <h1>Mes billets</h1>
                 <div id="mesBillets">
 
 			 </div>
