--- a/SI3-6Thé/projet/site/reservations.html
+++ b/SI3-6Thé/projet/site/reservations.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- script js -->
-    <script src="js/home.js"></script>
+    <script src="js/reservations.js"></script>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -56,34 +56,14 @@
             <thead class="thead-dark">
               <tr>
                 <th scope="col">#</th>
-                <th scope="col">Code départ</th>
-                <th scope="col">Code destination</th>
+                <th scope="col">Départ</th>
+                <th scope="col">Destination</th>
+                <th scope="col">Date</th>
                 <th scope="col">Prix</th>
                 <th scope="col"></th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td>CDG</td>
-                <td>JFK</td>
-                <td>400</td>
-                <td><button id="btnCancel" class="btn btn-danger">Annuler</button></td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td>CDG</td>
-                <td>JFK</td>
-                <td>400</td>
-                <td><button id="btnCancel" class="btn btn-danger">Annuler</button></td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td>CDG</td>
-                <td>JFK</td>
-                <td>400</td>
-                <td><button id="btnCancel" class="btn btn-danger">Annuler</button></td>
-              </tr>
+            <tbody id="tbody">
             </tbody>
           </table>
         </div>
