--- a/si1-chepa/projet/code/lumen-project/public/InterfaceClient/reservation.html
+++ b/si1-chepa/projet/code/lumen-project/public/InterfaceClient/reservation.html
@@ -5,8 +5,24 @@
 		<title>Reservation</title>
 	</head>
 	<body>
+
+    <header>
+    <div class="gen">
+    
+<ul class="list-arrea">
+		<li><a href="login.html">Se connecter</a></li>
+		<li><a href="#">Liste des vols</a></li>
+		<li><a href="acceuil.html">Retour accueil</a></li>
+		<li><a href="#">Contact</a></li>
+		</ul>
+	</div>
+<div class="frontale-text">
+    </div>
+
+</header>
+
 		<div>
-			<h1> <p class="center" color="white"><u>
+			<h1> <p class="center" style="background-color:black;color:white;"><u>
 				<b><center>Choisissez un Vol</center></b></p>
 				</u>
 			</h1>
@@ -14,10 +30,6 @@
 		<table class="center">
 <div class="gen">
 
-<ul class="list-arrea">
-<li><a href="acceuil.html">Retour Accueil</a></li>
-</ul>
-</div>
     <thead>
         <tr>
             <th colspan="3">Vols disponibles</th>
