--- a/SI3-6Thé/projet/site/home.html
+++ b/SI3-6Thé/projet/site/home.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="reservations.html">Vos réservations</a>
+            <a class="nav-link" href="reservations.html">Mes réservations</a>
           </li>
         </ul>
       </div>
@@ -45,6 +45,7 @@
     <div class="container-fluid overflow-auto">
       <div class="row">
         <div class="col-md-12">
+          <div id="message"></div>
           <div class="title">
             <h2>Vols disponibles</h2>
           </div>
@@ -60,6 +61,7 @@
                 <th scope="col">Destination</th>
                 <th scope="col">Date</th>
                 <th scope="col">Prix</th>
+                <th scope="col">Nombre de personnes</th>
                 <th scope="col"></th>
               </tr>
             </thead>
