--- a/SI2-DREAM-TEAM/projet/src/main/resources/public/mesvols.html
+++ b/SI2-DREAM-TEAM/projet/src/main/resources/public/mesvols.html
@@ -13,15 +13,12 @@
 		<strong>DREAM-TEAM Airlines</strong>
 	</div>
 	<nav>
-		<form action="index.html" method="GET">
-			<ul id="onglets">
-				<a href="index.html"><li class="onglet">Accueil</li></a>
-				<a href="reservation.html"><li class="onglet">Réserver un vol</li></a>
-				<a href="mesvols.html"><li class="onglet">Vols réservés</li></a>
-				<a> <li class="txt"> <div> <input type="text" id="name" name="name" required minlength="3" maxlength="20" size="20"></div> </li></a>
-				<a> <li> <input class="form-submit-button" type="submit" value="Connexion"> </li> </a>
-			</ul>
-		</form>
+		<ul id="onglets">
+			<a href="index.html"><li class="onglet">Accueil</li></a>
+			<a href="reservation.html"><li class="onglet">Réserver un vol</li></a>
+			<a href="mesvols.html"><li class="onglet">Vols réservés</li></a>
+			<a> <input class="form-submit-button2" type="submit" value="Déconnexion"></a>
+		</ul>
 	</nav>
 </header>
 
