--- a/SI-IAlsoHaveNoName/Projet/code/user.html
+++ b/SI-IAlsoHaveNoName/Projet/code/user.html
@@ -8,13 +8,12 @@
     <body>
         <div id="main">
             <div id="header">
-                <table id="list_vols">
+                <table id="trips_list">
                     <tbody id="trips_list"></tbody>
                 </table>
                 <div id="logo"></div>
             
                 <script src="https://cdn.jsdelivr.net/npm/axios@0.21.0/dist/axios.min.js"></script>
-                <script type="text/javascript" src="../javascript/include.js"></script>
                 <script type="text/javascript" src="../API/class.js"></script>
                 <script type="text/javascript" src="../javascript/users.js"></script>
                 <script type="text/javascript">
